# kist

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  release.yaml
src/: app.rs  config.rs  engine.rs  error.rs  format.rs  main.rs  model.rs  search.rs
src/ui/: add_bar.rs  add_options.rs  confirm.rs  detail.rs  filter_bar.rs  help.rs  limits_bar.rs  list.rs  mod.rs  search.rs  theme.rs
