[package]
name = "kist"
version = "0.1.0"
edition = "2024"
description = "A simple terminal torrent client built on librqbit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/QaidVoid/kist"
readme = "README.md"
keywords = ["torrent", "bittorrent", "tui", "terminal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
librqbit = { version = "8.1.1", default-features = false, features = ["rust-tls"] }
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
unicode-width = "0.2.2"
